--- a/languages.html
+++ b/languages.html
@@ -117,7 +117,7 @@
 
 <ul>
 <li>Java: <a href="https://github.com/ReactiveX/RxJava">RxJava</a></li>
-<li>JavaScript: <a href="https://github.com/Reactive-Extensions/RxJS">RxJS</a></li>
+<li>JavaScript: <a href="https://github.com/ReactiveX/rxjs">RxJS</a></li>
 <li>C#: <a href="https://github.com/Reactive-Extensions/Rx.NET">Rx.NET</a></li>
 <li>C#(Unity): <a href="https://github.com/neuecc/UniRx">UniRx</a></li>
 <li>Scala: <a href="https://github.com/ReactiveX/RxScala">RxScala</a></li>
