pulling in recent changes from develop branch

--- a/documentation/operators.html
+++ b/documentation/operators.html
@@ -410,7 +410,7 @@ Own Operators</a>.</p>
     <dd><a href="operators/switch.html">Switch</a></dd>
   </dl></dd>
 
- <dt>I want emit the items from an Observable after transforming them</dt>
+ <dt>I want to emit the items from an Observable after transforming them</dt>
   <dd class="sub"><dl>
    <dt>one at a time with a function</dt>
     <dd><a href="operators/map.html">Map</a></dd>
