--- a/tutorials.html
+++ b/tutorials.html
@@ -158,6 +158,7 @@
 <li><a href="http://bit.ly/rxjava-essentials">RxJava Essentials</a> - RxJava for Android developers</li>
 <li><a href="http://bit.ly/grokking-rx">Grokking ReactiveX</a> - From theory to everyday real-world problems. No matter if you code for backend, frontend or Android: we got you covered!</li>
 <li><a href="https://www.manning.com/books/grokking-reactive-user-interfaces">Grokking Reactive User Interfaces</a> - Teaches you a new way of thinking about programs and data as well as how to build robust and extensible user interfaces. </li>
+<li><a href="https://www.packtpub.com/web-development/mastering-reactive-javascript">Mastering Reactive JavaScript</a> authored by Erich de Souza OliveiraUo, Packt.</li>
 </ul>
 
 <h2 id="courses">Courses</h2>
@@ -165,6 +166,8 @@
 <ul>
 <li><a href="http://pluralsight.com/training/Courses/TableOfContents/reactive-programming-java-8-rxjava">Reactive Programming in Java 8 With RxJava</a>, a course designed by Russell Elledge</li>
 <li><a href="https://www.coursera.org/course/reactive">Principles of Reactive Programming</a> on Coursera</li>
+<li><a href="https://www.packtpub.com/application-development/reactive-java-9-video">Reactive Java 9</a> authored by Manuel Vicente Vivo, Packt.</li>
+<li><a href="https://www.packtpub.com/application-development/reactive-javascript-programming-video">Reactive JavaScript Programming </a> authored by Shriyans Bhatnagar, Packt.</li>
 </ul>
 
 <h2 id="rxjava">RxJava</h2>
