--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -213,7 +213,7 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPHP combineLatest %}
+  {% lang_operator RxPHP combineLatest withLatestFrom %}
 <figure class="variant">
     <figcaption>
     <p>
@@ -245,6 +245,52 @@ Next value: First: 0, Second: 0
 Next value: First: 1, Second: 0
 Next value: First: 1, Second: 1
 Next value: First: 2, Second: 1
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure><figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP also has an operator <code>withLatestFrom</code>.
+    </p>
+    <p>
+    Merges the specified observable sequences into one observable sequence by using the selector function only when the (first) source observable sequence produces an element.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/withLatestFrom/withLatestFrom.php
+
+/* Have staggering intervals */
+$source1 = \Rx\Observable::interval(140)
+    ->map(function ($i) {
+        return 'First: ' . $i;
+    });
+$source2 = \Rx\Observable::interval(50)
+    ->map(function ($i) {
+        return 'Second: ' . $i;
+    });
+
+$source3 = \Rx\Observable::interval(100)
+    ->map(function ($i) {
+        return 'Third: ' . $i;
+    });
+
+$source = $source1->withLatestFrom([$source2, $source3], function ($value1, $value2, $value3) {
+    return $value1 . ', ' . $value2 . ', ' . $value3;
+})->take(4);
+
+$source->subscribe($stdoutObserver);
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: First: 0, Second: 1, Third: 0
+Next value: First: 1, Second: 4, Third: 1
+Next value: First: 2, Second: 7, Third: 3
+Next value: First: 3, Second: 10, Third: 4
 Complete!
     </pre>
 </div>
