copying over changes from develop branch

--- a/community.html
+++ b/community.html
@@ -140,6 +140,15 @@
 <li><a href="https://gitter.im/Reactive-Extensions/RxJS">Gitter RxJS room</a></li>
 </ul>
 
+<h2 id="rxswift">RxSwift</h2>
+
+<ul>
+<li><a href="http://stackoverflow.com/questions/tagged/rx-swift">StackOverflow rx-swift</a></li>
+<li><a href="http://slack.rxswift.org">RxSwift Slack</a></li>
+<li><a href="https://community.rxswift.org">RxSwift Community Projects</a></li>
+<li><a href="https://github.com/RxSwiftCommunity">RxSwift Community @ GitHub</a></li>
+</ul>
+
 <h2 id="rx.net">Rx.NET</h2>
 
 <ul>
