--- a/documentation/operators/to.html
+++ b/documentation/operators/to.html
@@ -149,7 +149,7 @@
  In some implementations of ReactiveX, there is also an operator that converts an Observable into a
  &ldquo;Blocking&rdquo; Observable. A Blocking Observable extends the ordinary Observable by providing a set of
  methods, operating on the items emitted by the Observable, that block. Some of the
- <span class="operator">To</span> operators are in this Blocking Obsevable set of extended operations.
+ <span class="operator">To</span> operators are in this Blocking Observable set of extended operations.
 </p>
 
 <h4>See Also</h4>
