--- a/documentation/operators/takeuntil.html
+++ b/documentation/operators/takeuntil.html
@@ -11,7 +11,7 @@ id: takeUntil
 </ol>
 
    <h1>TakeUntil</h1>
-   <h3>discard any items emitted by an Observable after a second Observable emits an item or terminates</h3>
+   <h3>discard any items emitted by an Observable after a second Observable emits an item</h3>
 
    <figure class="rxmarbles-figure">
     <rx-marbles key="takeUntil"></rx-marbles>
@@ -20,6 +20,10 @@ id: takeUntil
      monitors a second Observable that you provide. If this second Observable emits an item or sends a
      termination notification, the Observable returned by <span class="operator">TakeUntil</span> stops
      mirroring the source Observable and terminates.
+    </p><p>
+     In some ReactiveX implementations, <span class="operator">TakeUntil</span> will not stop mirroring
+     the source Observable if the second Observable terminates. This is unfortunate and confusing,
+     but something we have to live with.
     </p></figcaption>
    </figure>
 
